# sqlc-gen-python-arche

./: .changie.yaml  .gitignore  CONTRIBUTING.md  NOTICE  README.md  go.mod  mise.toml  noxfile.py  pyproject.toml  ruff.toml  sqlc.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  prepare_release.yml  release.yml
internal/: builders.go  file_header_test.go  gen.go  nullability_chokepoint_test.go  nullability_spike_test.go  sqlalchemy_class_template_arch_test.go  sqlalchemy_many_arch_test.go  sqlalchemy_many_heterogeneity_arch_test.go  sqlalchemy_params_import_arch_test.go  sqlalchemy_params_ordering_arch_test.go  sqlalchemy_pydantic_runtime_arch_test.go  str_enum_test.go  validate_knob_guard_test.go  validate_test.go
internal/codegen/: common.go  enums.go  init.go  queries.go  tables.go  tables_empty_test.go
internal/codegen/builders/: docstrings.go  string.go
internal/codegen/drivers/: aiosqlite.go  asyncpg.go  sqlalchemy.go  sqlalchemy_test.go  sqlite3.go
internal/core/: Column.go  config.go  config_test.go  enums.go  enums_test.go  importer.go  keywords.go  keywords_test.go  models.go  name_disambiguator_test.go  nullability.go  nullability_test.go  overrides.go  parseconfig_test.go  sql_root_test.go  utils.go
internal/types/: common.go  postgresql.go  postgresql_test.go  sqlite.go
plugin/: main.go
test/: __init__.py
test/driver_aiosqlite/: sqlc.yaml
test/driver_asyncpg/: sqlc.yaml
test/driver_asyncpg/attrs/: test_attrs_classes.py  test_attrs_functions.py
test/driver_asyncpg/dataclass/: test_dataclass_classes.py  test_dataclass_functions.py
test/driver_asyncpg/msgspec/: test_msgspec_classes.py  test_msgspec_functions.py
test/driver_sqlalchemy/: README.md  conftest.py
test/driver_sqlalchemy/class_docstring_suppression/: queries.sql  sqlc.yaml
test/driver_sqlalchemy/defaults_last/: queries.sql  schema.sql  sqlc.yaml  test_defaults_last_live.py
test/driver_sqlalchemy/dropin_fixes/: queries.sql  schema.sql  sqlc.yaml
test/driver_sqlalchemy/embed/: queries.sql  schema.sql  sqlc.yaml  test_embed_live.py
test/driver_sqlalchemy/embed_validate/: queries.sql  schema.sql  shapes.py  sqlc.yaml  test_embed_validate_live.py
test/driver_sqlalchemy/file_header/: queries.sql  schema.sql  sqlc.yaml
test/driver_sqlalchemy/jsonb_typed/: queries.sql  schema.sql  shapes.py  sqlc.yaml
test/driver_sqlalchemy/jsonb_validate/: queries.sql  schema.sql  shapes.py  sqlc.yaml  (+1 more)
test/driver_sqlite3/: sqlc.yaml
test/shape_repro/: README.md  queries.sql  schema.sql  sqlc.yaml
(+95 files in other folders)
